fixed shrinking of nav menu on iphones

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 html, body {
   height: 100%;
+  /* -webkit-margin-top-collapse: discard; */
 }
 
 body {
@@ -67,6 +68,7 @@ a {
 }
 
 .root {
+  display: flex;
   max-width: 1440px;
   min-width: 320px;;
   margin: 0 auto;
@@ -185,10 +187,10 @@ a {
   width: 100%;
   text-align: center;
 }
-
+/* 
 .hidden {
   display: none;
-}
+} */
 
 @media screen and (max-width : 1110px) {
   .header {
